spring-mvc Rest service interface is now generated with swagger-codegen maven plugin
